--- a/cyan/package.json
+++ b/cyan/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "framer-motion": "^12.0.0",
     "next": "15.5.4",
     "react": "19.1.0",
